# ci-sherlock-agent

./: .gitignore  README.md  action.yml  pyproject.toml
ci_sherlock/: analyzer.py  cli.py  commenter.py  config.py  db.py  fingerprint.py  github_client.py  llm_engine.py  models.py  notifier.py  optimization.py  scoring.py
ci_sherlock/.ci-sherlock/: history.db
ci_sherlock/dashboard/: app.py
ci_sherlock/dashboard/views/: flaky.py  run_history.py  score.py  slowest.py
ci_sherlock/parsers/: base.py  jest.py  playwright.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  EXTENDING.md  HISTORY_DB_PERSISTENCE.md  IMPLEMENTATION.md  INTEGRATION_GUIDE.md  LINKEDIN_POST.md  PROPOSED_FIXES.md  STACK.md
examples/: ci.yml
tests/: test_analyzer.py  test_commenter.py  test_config.py  test_db.py  test_fingerprint.py  test_flaky.py  test_github_client.py  test_llm_engine.py  test_optimization.py
tests/fixtures/: playwright-report.json
tests/parsers/: test_jest.py  test_playwright.py
tests/parsers/fixtures/: jest-report.json
