[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci-sherlock"
version = "0.1.0"
description = "AI-powered CI failure investigation for GitHub Actions"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "instructor>=1.0.0",
    "httpx>=0.27.0",
    "sqlite-utils>=3.36.0",
    "streamlit>=1.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
ci-sherlock = "ci_sherlock.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ci_sherlock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
